# face_model_scratch

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: plan_fix_embedding_collapse.md
docs/project_working_session/: CURRENT_STEP.md  REPO_CONTEXT.md  changes.md
scripts/: colab_autorun_train.py  colab_shell_1_setup.py  colab_shell_2_train.py
src/face_model_core/: __init__.py  checkpoint.py  cli.py  config.py  data.py  inference.py  losses.py  model.py  similarity.py  train.py  utils.py  validation.py
src/face_model_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_checkpoint.py  test_cli.py  test_config.py  test_inference.py  test_losses.py  test_model.py  test_similarity.py  test_train_resume.py  test_validation.py
